Fix GlobalCss Scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,3 +140,7 @@
   }
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
